# pyvalhalla

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build-requirements.txt  conanfile.txt  dev-requirements.txt  notebook-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: custom_builds.yml  publish.yml  publish_tags.yml  pull_request.yml  push_master.yml  test.yml
docs/: customizations.md  releasing.md
examples/: examples.ipynb
include/: geos_c.h
include/common/cpp-statsd-client/: StatsdClient.hpp
include/common/valhalla/baldr/: graphreader.h
include/common/valhalla/tyr/: actor.h
include/darwin/: geos_c.h  spatialite.h
include/darwin/geos/: version.h
include/darwin/spatialite/: control_points.h  debug.h  gaia_network.h  gaia_topology.h  gaiaaux.h  gaiaconfig-msvc.h  gaiaconfig-msvc.h.in  gaiaconfig.h  gaiaconfig.h.in  gaiaexif.h  gg_formats.h  gg_sequence.h  gg_wfs.h  gg_xml.h  spatialite_ext.h  sqlite.h  stored_procedures.h
include/darwin/valhalla/proto/: api.pb.cc  api.pb.h  common.pb.cc  common.pb.h  directions.pb.cc  directions.pb.h  incidents.pb.cc  incidents.pb.h  info.pb.cc  (+15 more)
include/linux/: geos_c.h  spatialite.h
include/linux/curl/: curl.h
include/linux/geos/: version.h
include/linux/spatialite/: sqlite3.h
include/valhalla/proto/: info.pb.h  transit.pb.h  transit_fetch.pb.h
include/windows/: freexl.h  geos_c.h  localcharset.h  sqlite3-vcpkg-config.h  sqlite3.h
include/windows/geos/: platform.h  version.h
include/windows/spatialite/: gaiaconfig-msvc.h  gaiaconfig.h  gaiageo.h  gaiamatrix.h  geojson.h  geopackage.h  gg_advanced.h  gg_const.h  gg_core.h  gg_dxf.h  gg_dynamic.h  gg_mbr.h  gg_structs.h
lib/darwin/: lib  libprotobuf-lite.28.dylib  libprotobuf-lite.32.dylib  libprotobuf-lite.dylib
lib/linux/: libcurl.so.4  libprotobuf-lite.so.10  libz.so.1
lib/windows/: charset.lib  freexl.lib  geos.lib  geos_c.lib  iconv.lib  jpeg.lib  libcurl.lib  libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib  libxml2.lib  lua51.lib  lzma.lib  pkgconf.lib  proj.lib  spatialite.lib  sqlite3.lib  tiff.lib  turbojpeg.lib  zlib.lib
lib/windows/include/: iconv.h
requirements/: build-requirements.in  build-requirements.txt  dev-requirements.in  dev-requirements.txt  notebook-requirements.in  notebook-requirements.txt
scripts/: build_linux.sh  build_linux_do.sh  build_mac.sh
test/: test_utrecht.py  test_valhalla.json
upstream_patches/: boost_conan_only.patch  boost_conan_only_d2f766700.patch  custom_eclever_actor_b5ce7c418c.patch  custom_eclever_b5ce7c418c.patch  custom_eclever_locate_serializer_b5ce7c418c.patch  custom_eclever_service_b5ce7c418c.patch  custom_eclever_trace_serializer_b5ce7c418c.patch  test_static_protobuf_b5ce7c418c.patch
valhalla/: __init__.py  _valhalla.cc  actor.py  config.py  utils.py  valhalla_build_config.py
valhalla.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+53 files in other folders)
