[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
    "setuptools_scm_git_archive",
    "pybind11>=2.9.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 105
exclude = '''
/(
    \\..*
  | dist
  | wheelhouse
  | .*build
  | __pycache__
)/
'''

[tool.cibuildwheel]
test-command = "python -c \"from valhalla import Actor\""
# find out current defaults: cibuildwheel --print-build-identifiers --platform linux
build = "cp*"
skip = "*musllinux*"
archs = "native"
manylinux-x86_64-image = "ghcr.io/gis-ops/manylinux:valhalla_python"

[tool.cibuildwheel.windows]
before-all = "pip install conan delvewheel"
repair-wheel-command = "delvewheel repair --add-path lib/windows {wheel} -w {dest_dir}"

[tool.cibuildwheel.linux]
before-all = "ls -la /home/runner/work/valhalla-py/valhalla-py/conan_data/boost/1.71.0/_/_/package/524ea35a8120baabdde02483add58d81bf541327/include"
