[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
    "setuptools_scm_git_archive",
    "pybind11>=2.9.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 105
exclude = '''
/(
    \\..*
  | dist
  | wheelhouse
  | '*build'
  | __pycache__
  | '*.toml'
)/
'''

[tool.cibuildwheel]
test-command = "python -c \"from valhalla import Actor\""
# find out current defaults: cibuildwheel --print-build-identifiers --platform linux
build = "cp*"
skip = "*musllinux*"
archs = "native"
manylinux-x86_64-image = "ghcr.io/gis-ops/manylinux:valhalla_python"

[tool.cibuildwheel.windows]
before-all = "pip install conan delvewheel"
repair-wheel-command = "delvewheel repair --add-path lib/windows {wheel} -w {dest_dir}"

[tool.cibuildwheel.linux]
before-all = """
pip install conan
conan profile new default --detect
conan config set storage.path={package}/conan_data
conan install --install-folder {package}/conan_build --remote conancenter {package}/conanfile.txt
"""

[tool.cibuildwheel.macos]
environment = { DYLD_LIBRARY_PATH="$(pwd)/lib/darwin:$DYLD_LIBRARY_PATH" }
